--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,7 +260,7 @@ article {
     margin: .5em;
     border-radius: 2px;
     box-shadow: rgba(0, 0, 0, 0.0980392) 0 2px 4px, rgba(0, 0, 0, 0.0980392) 0 0 3px;
-    background-color: #b1b1b1;
+    background-color: #ffffff;
     flex-wrap: wrap;
     padding: 1em;
     align-content: center;
