--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,7 +259,7 @@ article {
     /*min-height: 18em;*/
     margin: .5em;
     border-radius: 2px;
-    box-shadow: rgba(0, 0, 0, 0.0980392) 0 2px 4px, rgba(0, 0, 0, 0.0980392) 0 0 3px;
+    box-shadow: rgba(0, 0, 0, 0.5) 1px 1px 5px ;
     background-color: #ffffff;
     flex-wrap: wrap;
     padding: 1em;
